[tool.poetry]
name = "xortool"
version = "1.0.2"
description = "A tool to analyze multi-byte xor cipher"
authors = ["hellman"]
license = "MIT"
readme = "README.md"
keywords = ["xor", "xortool", "cryptanalysis"]
classifiers = [
    'Intended Audience :: Information Technology',
    'Intended Audience :: Science/Research',
    'Topic :: Security :: Cryptography',
]

[tool.poetry.scripts]
xortool = 'xortool.tool_main:main'
xortool-xor = 'xortool.tool_xor:main'

[tool.poetry.urls]
homepage = "http://github.com/hellman/xortool"

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
docopt = "^0.6.2"
importlib_metadata = "4.8`"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
